--- a/设计模式学习笔记/设计模式学习笔记.md
+++ b/设计模式学习笔记/设计模式学习笔记.md
@@ -150,7 +150,7 @@
 
 - 创建型模式对类的实例化过程进行了抽象，能够将对象的创建与对象的使用过程分离。
 
-- 简单工厂模式又称为静态工厂方法模式，它属于类创建型模式。在简单工厂模式中，可以根据参数的不同返回不同类的实例。简单工厂模式专门定义一个类来负责创建其他类的实例，被创建的实例通常都具有共同的父类。
+- 简单工厂模式又称为**静态工厂方法模式**，它属于类创建型模式。在简单工厂模式中，可以根据参数的不同返回不同类的实例。简单工厂模式专门定义一个类来负责创建其他类的实例，被创建的实例通常都具有共同的父类。
 
 - 简单工厂模式包含三个角色：工厂角色负责实现创建所有实例的内部逻辑；抽象产品角色是所创建的所有对象的父类，负责描述所有实例所共有的公共接口；具体产品角色是创建目标，所有创建的对象都充当这个角色的某个具体类的实例。
 
@@ -166,7 +166,9 @@
 现在对该系统进行修改，不再设计一个按钮工厂类来统一负责所有产品的创建，而是将具体按钮的创建过程交给专门的工厂子类去完成，我们先定义一个抽象的按钮工厂类，再定义具体的工厂类来生成圆形按钮、矩形按钮、菱形按钮等，它们实现在抽象按钮工厂类中定义的方法。这种抽象化的结果使这种结构可以在不修改具体工厂类的情况下引进新的产品，如果出现新的按钮类型，只需要为这种新类型的按钮创建一个具体的工厂类就可以获得该新按钮的实例，这一特点无疑使得工厂方法模式具有超越简单工厂模式的优越性，更加符合“开闭原则”。
 
 ### 1.2.2 模式定义
-工厂方法模式(`Factory Method Pattern`)又称为工厂模式，也叫虚拟构造器(`Virtual Constructor`)模式或者多态工厂(`Polymorphic Factory`)模式，它属于类创建型模式。在工厂方法模式中，工厂父类负责定义创建产品对象的公共接口，而工厂子类则负责生成具体的产品对象，这样做的目的是将产品类的实例化操作延迟到工厂子类中完成，即通过工厂子类来确定究竟应该实例化哪一个具体产品类。
+工厂方法模式(`Factory Method Pattern`)又称为工厂模式，也叫虚拟构造器(`Virtual Constructor`)模式或者多态工厂(`Polymorphic Factory`)模式，它属于类创建型模式。
+
+在工厂方法模式中，工厂父类负责定义创建产品对象的公共接口，而工厂子类则负责生成具体的产品对象，这样做的目的是将产品类的实例化操作延迟到工厂子类中完成，即通过工厂子类来确定究竟应该实例化哪一个具体产品类。
 
 ### 1.2.3 模式结构
 工厂方法模式包含如下角色：
@@ -217,19 +219,43 @@
 
 ### 1.2.7 实例
 
-1. 日志记录器
-某系统日志记录器要求支持多种日志记录方式，如文件记录、数据库记录等，且用户可以根据要求动态选择日志记录方式， 现使用工厂方法模式设计该系统。
+	public abstract class AudiFactory{
+		// clz 表示具体的车型号
+		public abstract <T extends AudiCar> T createAudiCar(Class<T> clz);
+	}
+	
+	public AudiCarFactory extends AudiFactory{
+		@override
+		public <T extends AudiCar> T createAudiCar(Class<T> clz){
+			AudiCar car = null;
+			try{
+				car = Class.forName(clz.getName()).newInstance();
+			}catch(Exception e){
+				e.printStackTrace();
+			}
+			return (T)car;
+		}
+	}
+	
+	public abstract class AudiCar{
+		public abstract void drive();
+	}
+	
+	public class Q3Car extends AuduiCar{
+		public void drive(){
+			//q3 driving.....
+		}
+	}
 
-结构图:
-![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/loger.jpg)
+	AudiFactory factory  = new AudiCarFactory();
+	Q3Car q3car = factory.createAudiCar(Q3Car.class);
+	q3car.drive()
 
-时序图:
-![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/seq_loger.jpg)
 
 ### 1.2.8 工厂方法模式的优点
 - 在工厂方法模式中，工厂方法用来创建客户所需要的产品，同时还向客户隐藏了哪种具体产品类将被实例化这一细节，用户只需要关心所需产品对应的工厂，无须关心创建细节，甚至无须知道具体产品类的类名。
 
-- 基于工厂角色和产品角色的多态性设计是工厂方法模式的关键。它能够使工厂可以自主确定创建何种产品对象，而如何创建这个对象的细节则完全封装在具体工厂内部。工厂方法模式之所以又被称为多态工厂模式，是因为所有的具体工厂类都具有同一抽象父类。
+- 基于工厂角色和产品角色的多态性设计是工厂方法模式的关键。它能够使工厂可以自主确定创建何种产品对象，而如何创建这个对象的细节则完全封装在具体工厂内部。**工厂方法模式之所以又被称为多态工厂模式，是因为所有的具体工厂类都具有同一抽象父类**。
 
 - 使用工厂方法模式的另一个优点是在系统中加入新产品时，无须修改抽象工厂和抽象产品提供的接口，无须修改客户端，也无须修改其他的具体工厂和具体产品，而只要添加一个具体工厂和具体产品就可以了。这样，系统的可扩展性也就变得非常好，完全符合“开闭原则”。
 
@@ -248,6 +274,19 @@
 - 将创建对象的任务委托给多个工厂子类中的某一个，客户端在使用时可以无须关心是哪一个工厂子类创建产品子类，需要时再动态指定，可将具体工厂类的类名存储在配置文件或数据库中。
 
 ### 1.2.11 模式应用 
+
+**Java**: 
+
+- List 和 Set 俩个接口都继承自 Collection 接口，而Collection接口 继承自 Iterable接口， Iterable 接口提供了一个 方法 `Iterator<T> iterator();`
+
+- 在这个结构中， List 接口 相当于 抽象工厂类， ArrayList 相当于 具体工厂类, Iterator 接口相当于抽象产品类，Itr(ArrayList返回的Iterator) 相当于具体产品.
+
+**Android:**
+
+- Activity 中的 onCreate()方法 相当于一个工厂方法。在onCreate()方法里，会通过`setContentView()`传递一个View对象 给framework处理。
+
+	- View 可以理解为 抽象产品类，具体的布局 可以理解为 具体产品类 ， Activity 就是抽象工厂类， 实现了 Activity的类 就是具体工厂类了. 
+
 
 ### 1.2.12 模式扩展
 
@@ -277,9 +316,9 @@
 
 	**为了更清晰地理解工厂方法模式，需要先引入两个概念：**
 
-	- 产品等级结构 ：产品等级结构即产品的继承结构，如一个抽象类是电视机，其子类有海尔电视机、海信电视机、TCL电视机，则抽象电视机与具体品牌的电视机之间构成了一个产品等级结构，抽象电视机是父类，而具体品牌的电视机是其子类。
+	- **产品等级结构** ：**产品等级结构即产品的继承结构**，如一个抽象类是电视机，其子类有海尔电视机、海信电视机、TCL电视机，则抽象电视机与具体品牌的电视机之间构成了一个产品等级结构，抽象电视机是父类，而具体品牌的电视机是其子类。
 
-	- 产品族 ：在抽象工厂模式中，产品族是指由同一个工厂生产的，位于不同产品等级结构中的一组产品，如海尔电器工厂生产的海尔电视机、海尔电冰箱，海尔电视机位于电视机产品等级结构中，海尔电冰箱位于电冰箱产品等级结构中。
+	- **产品族** ：**在抽象工厂模式中，产品族是指由同一个工厂生产的，位于不同产品等级结构中的一组产品**，如海尔电器工厂生产的海尔电视机、海尔电冰箱。 海尔电视机位于电视机产品等级结构中，海尔电冰箱位于电冰箱产品等级结构中。
 
 - 当系统所提供的工厂所需生产的具体产品并不是一个简单的对象，而是多个位于不同产品等级结构中属于不同类型的具体产品时需要使用抽象工厂模式。
 
@@ -295,7 +334,7 @@
 
 - AbstractFactory：抽象工厂
 
-	声明了一组用于创建一种产品的方法，每一个方法对应一种产品
+	声明了一组用于创建产品的方法，每一个方法对应一种产品
 
 - ConcreteFactory：具体工厂
 
@@ -303,7 +342,7 @@
 
 - AbstractProduct：抽象产品
 
-	为每种产品声明接口
+	每种产品的一个统一接口
 
 - Product：具体产品
 
@@ -389,8 +428,10 @@
 
 ### 1.3.6 模式分析
 ### 1.3.7 实例
+
 ### 1.3.8 优点
-- 抽象工厂模式隔离了具体类的生成，使得客户并不需要知道什么被创建。由于这种隔离，更换一个具体工厂就变得相对容易。所有的具体工厂都实现了抽象工厂中定义的那些公共接口，因此只需改变具体工厂的实例，就可以在某种程度上改变整个软件系统的行为。另外，应用抽象工厂模式可以实现高内聚低耦合的设计目的，因此抽象工厂模式得到了广泛的应用。
+
+- 抽象工厂模式隔离了具体类的生成，使得客户并不需要知道什么被创建。由于这种隔离，更换一个具体工厂就变得相对容易。所有的具体工厂都实现了抽象工厂中定义的那些公共接口，因此只需改变具体工厂的实例，就可以在某种程度上改变整个软件系统的行为。另外，**应用抽象工厂模式可以实现高内聚低耦合的设计目的**，因此抽象工厂模式得到了广泛的应用。
 
 - 当一个产品族中的多个对象被设计成一起工作时，它能够保证客户端始终只使用同一个产品族中的对象。这对一些需要根据当前环境来决定其行为的软件系统来说，是一种非常实用的设计模式。
 
@@ -401,6 +442,7 @@
 - 在添加新的产品对象时，难以扩展抽象工厂来生产新种类的产品，这是因为在抽象工厂角色中规定了所有可能被创建的产品集合，要支持新种类的产品就意味着要对该接口进行扩展，而这将涉及到对抽象工厂角色及其所有子类的修改，显然会带来较大的不便。
 
 - **开闭原则的倾斜性**（**增加新的工厂和产品族容易，增加新的产品等级结构麻烦**）。
+
 ### 1.3.10 适用环境
 在以下情况下可以使用抽象工厂模式：
 
@@ -452,9 +494,9 @@
 复杂对象相当于一辆有待建造的汽车，而对象的属性相当于汽车的部件，建造产品的过程就相当于组合部件的过程。由于组合部件的过程很复杂，因此，这些部件的组合过程往往被“外部化”到一个称作建造者的对象里，建造者返还给客户端的是一个已经建造完毕的完整产品对象，而用户无须关心该对象所包含的属性以及它们的组装方式，这就是建造者模式的模式动机。 
 
 ### 1.4.2 模式定义
-造者模式(`Builder Pattern`)：将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示。
+建造者模式(`Builder Pattern`)：将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示。
 
-建造者模式是一步一步创建一个复杂的对象，它允许用户只通过指定复杂对象的类型和内容就可以构建它们，用户不需要知道内部的具体构建细节。建造者模式属于对象创建型模式。根据中文翻译的不同，建造者模式又可以称为**生成器模式**。
+建造者模式是一步一步创建一个复杂的对象，**它允许用户只通过指定复杂对象的类型和内容就可以构建它们**，用户不需要知道内部的具体构建细节。建造者模式属于对象创建型模式。根据中文翻译的不同，建造者模式又可以称为**生成器模式**。
 ### 1.4.3 模式结构
 建造者模式包含如下角色：
 
@@ -486,9 +528,9 @@ Director类：
 	    private static BaseCarBuilder mBcb;
 	
 	    public static BaseCar construct() {
-	        mBcb.buildBody("benz body");
-	        mBcb.buildWheel("benz wheel");
-	        mBcb.buildOthers("benz others");
+	        mBcb.buildBody(" body");
+	        mBcb.buildWheel(" wheel");
+	        mBcb.buildOthers(" others");
 	        return mBcb.getCar();
 	    }
 	
@@ -502,10 +544,10 @@ Builder类：
 
 	public abstract class BaseCarBuilder {
 	    protected BaseCar mBaseCar;
-	
+
 	    abstract void createCar();
 	
-	    abstract void buildWheel(String wheel);
+	    abstract void buildWheel(String wheel){}
 	
 	    abstract void buildBody(String body);
 	
@@ -563,12 +605,15 @@ Builder类：
 
 
 ### 1.4.6 模式分析
-抽象建造者类中定义了产品的创建方法和返回方法;
+
+**抽象建造者类中定义了产品的创建方法和返回方法**;
 
 建造者模式的结构中还引入了一个指挥者类`Director`，**该类的作用主要有两个：一方面它隔离了客户与生产过程；另一方面它负责控制产品的生成过程**。指挥者针对抽象建造者编程，客户端只需要知道具体建造者的类型，即可通过指挥者类调用建造者的相关方法，返回一个完整的产品对象
 
 在客户端代码中，无须关心产品对象的具体组装过程，只需确定具体建造者的类型即可，建造者模式将复杂对象的构建与对象的表现分离开来，这样使得同样的构建过程可以创建出不同的表现。
+
 ### 1.4.7 实例
+
 建造者模式可以用于描述KFC如何创建套餐：套餐是一个复杂对象，它一般包含主食（如汉堡、鸡肉卷等）和饮料（如果汁、 可乐等）等组成部分，不同的套餐有不同的组成部分，而KFC的服务员可以根据顾客的要求，一步一步装配这些组成部分，构造一份完整的套餐，然后返回给顾客。
 
 ![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/KFCBuilder.jpg)
@@ -599,7 +644,22 @@ Builder类：
 
 - 隔离复杂对象的创建和使用，并使得相同的创建过程可以创建不同的产品。
 ### 1.4.11 模式应用
-在很多游戏软件中，地图包括天空、地面、背景等组成部分，人物角色包括人体、服装、装备等组成部分，可以使用建造者模式对其进行设计，通过不同的具体建造者创建不同类型的地图或人物。
+
+**Android**
+
+- Android源码中，最常用到的Builder模式就是AlterDialog.Builder
+		
+		AlertDialog.Builder builder = new AlertDialog.Builder(this);
+        builder.setTitle("title");
+        builder.setMessage("message");
+        builder.setPositiveButton("positive", new DialogInterface.OnClickListener() {
+            @Override
+            public void onClick(DialogInterface dialog, int which) {
+                dialog.dismiss();
+            }
+        });
+        builder.create().show();
+
 
 ### 1.4.12 模式扩展
 **建造者模式的简化:**
@@ -631,6 +691,7 @@ Builder类：
 <span id="15"></span>
 ## 1.5 单例模式（Singleton）4
 ### 1.5.1 模式动机
+
 对于系统中的某些类来说，只有一个实例很重要，例如，一个系统中可以存在多个打印任务，但是只能有一个正在工作的任务；一个系统只能有一个窗口管理器或文件系统；一个系统只能有一个计时工具或ID（序号）生成器。
 
 如何保证一个类只有一个实例并且这个实例易于被访问呢？定义一个全局变量可以确保对象随时都可以被访问，但不能防止我们实例化多个对象。
@@ -684,7 +745,11 @@ Builder类：
 - 提供一个公有的静态工厂方法。
 
 ### 1.5.7 实例
-在操作系统中，打印池(`Print Spooler`)是一个用于管理打印任务的应用程序，通过打印池用户可以删除、中止或者改变打印任务的优先级，在一个系统中只允许运行一个打印池对象，如果重复创建打印池则抛出异常。现使用单例模式来模拟实现打印池的设计。
+
+**Android**
+
+- android中通常会通过Context获取系统级别的服务，这些服务其实就是单例的，通过HashMap实现的单例
+
 
 ### 1.5.8 优点
 - 提供了对唯一实例的受控访问。因为单例类封装了它的唯一实例，所以它可以严格控制客户怎样以及何时访问它，并为设计及开发团队提供了共享的概念。
@@ -695,7 +760,7 @@ Builder类：
 
 ### 1.5.9 缺点
 
-- 于单例模式中没有抽象层，因此单例类的扩展有很大的困难。
+- 单例模式中没有抽象层，因此单例类的扩展有很大的困难。
 
 - 单例类的职责过重，在一定程度上违背了“单一职责原则”。因为单例类既充当了工厂角色，提供了工厂方法，同时又充当了产品角色，包含一些业务方法，将产品的创建和产品的本身的功能融合到一起。
 
@@ -729,7 +794,7 @@ Builder类：
 
 <span id="2"></span>
 # 2 结构型模式
-结构型模式(`Structural Pattern`)描述如何将类或者对 象结合在一起形成更大的结构，就像搭积木，可以通过 简单积木的组合形成复杂的、功能更为强大的结构。
+结构型模式(`Structural Pattern`)描述如何将类或者对象结合在一起形成更大的结构，就像搭积木，可以通过 简单积木的组合形成复杂的、功能更为强大的结构。
 
 结构型模式可以分为**类结构型模式和对象结构型模式**：
 
@@ -806,7 +871,10 @@ Builder类：
 	
 	    @Override
 	    public int getVolt5() {
-	        return 5;
+	        int volt200 = getVolt200();
+			//经过转换
+			int volt5 = transform(volt200);
+	        return volt5;
 	    }
 	}
 
@@ -821,7 +889,10 @@ Builder类：
 	
 	    @Override
 	    public int getVolt5() {
-	        return 5;
+			int volt200 = getVolt200();
+			//经过转换
+			int volt5 = transform(volt200);
+	        return volt5;
 	    }
 	}
 	
@@ -833,6 +904,12 @@ Builder类：
 
 ### 2.1.6 模式分析
 ### 2.1.7 实例
+
+**Android**
+
+- ListView使用的adapter 就是 适配器模式,可以看做一种变种(默认Adapter模式是将不兼容的接口转换为可用的接口)
+
+
 ### 2.1.8 优点
 
 - 将目标类和适配者类解耦，通过引入一个适配器类来重用现有的适配者类，而无须修改原有代码。
