--- a/设计模式学习笔记/设计模式学习笔记.md
+++ b/设计模式学习笔记/设计模式学习笔记.md
@@ -2,6 +2,8 @@
 [UML类图和时序图](http://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#id1)
 [UML-wiki 统一建模语言](https://zh.wikipedia.org/wiki/%E7%BB%9F%E4%B8%80%E5%BB%BA%E6%A8%A1%E8%AF%AD%E8%A8%80)
 
+**在Android源码中寻找指定设计模式的代码，可以搜索模式的名称，Android源码命名相当规范！**
+
 # 目录
 
 * [1 创建型模式](#1)
@@ -907,7 +909,9 @@ Builder类：
 
 **Android**
 
-- ListView使用的adapter 就是 适配器模式,可以看做一种变种(默认Adapter模式是将不兼容的接口转换为可用的接口)
+- ListView使用的adapter 就是 适配器模式,可以看做一种变种(默认Adapter模式是将不兼容的接口转换为可用的接口)。
+
+- 这里的Target角色就是view，Adapter 角色就是将Item view 输出为View抽象的角色，Adaptee 就是需要被处理的Item View。
 
 
 ### 2.1.8 优点
@@ -964,7 +968,7 @@ Builder类：
 <span id="22"></span>
 ## 2.2 桥接模式(Bridge)3
 ### 2.2.1 模式动机
-设想如果要绘制矩形、圆形、椭圆、正方形，我们至少需要4个形状类，但是如果绘制的图形需要具有不同的颜色，如红色、绿色、蓝色等，此时至少有如下两种设计方案：
+设想如果要绘制矩形、圆形、椭圆、正方形，至少需要4个形状类，但是如果绘制的图形需要具有不同的颜色，如红色、绿色、蓝色等，此时至少有如下两种设计方案：
 
 - 第一种设计方案是为每一种形状都提供一套各种颜色的版本。
 
@@ -973,7 +977,9 @@ Builder类：
 **对于有两个变化维度（即两个变化的原因）的系统，采用方案二来进行设计系统中类的个数更少，且系统扩展更为方便。设计方案二即是桥接模式的应用。桥接模式将继承关系转换为关联关系，从而降低了类与类之间的耦合，减少了代码编写量。**
 
 ### 2.2.2 模式定义
-桥接模式(`Bridge Pattern`)：**将抽象部分与它的实现部分分离，使它们都可以独立地变化**。它是一种对象结构型模式，又称为柄体(`Handle and Body`)模式或接口(`Interface`)模式。
+桥接模式(`Bridge Pattern`)：**将抽象部分与它的实现部分分离，使它们都可以独立地变化**。
+
+它是一种对象结构型模式，又称为柄体(`Handle and Body`)模式或接口(`Interface`)模式。
 
 ### 2.2.3 模式结构
 桥接模式包含如下角色：
@@ -1058,6 +1064,16 @@ Builder类：
 - **模式定义中所谓的`抽象`与`实现`实质上对应的是俩个独立变化的维度，因此，任何多维度变化类或者说多个树状类之间的耦合都可以使用桥接模式来实现解耦。所谓的"抽象与实现分离"更偏向于实际的程序开发，俩者并不一定挂钩！**
 
 ### 2.2.7 实例
+
+**Android**
+
+- 在View的视图中，TextView,Button ,CheckBox等和View之间构成了一个继承关系的视图层级，但是具体的绘制到屏幕的部分是由和view相关的功能实现类DisplayList,HardwareLayer,Canvas负责的。这部分的关系可以看做桥接模式
+
+**Android Framework**
+![](http://ww1.sinaimg.cn/large/6ab93b35gy1fljr6xb6dcj20jn098jsp.jpg)
+
+- Window 和PhoneWindow 构成窗口的抽象部分，其中Window类是该抽象部分的抽象接口，PhoneWindow是抽象部分具体的实现及扩展。 WindowManger则是实现部分的基类，WindowManagerImpl是实现部分的实现类，wmi 使用WindowManagerGlobal 通过IWindowManager接口与WindowManagerService进行交互,并由wms进行具体的窗口管理工作。
+
 ### 2.2.8 优点
 桥接模式的优点:
 
@@ -1118,10 +1134,12 @@ Builder类：
 
 - 关联机制，即将一个类的对象嵌入另一个对象中，由另一个对象来决定是否调用嵌入对象的行为以便扩展自己的行为，便称这个嵌入的对象为装饰器(Decorator)
 
-装饰模式以对客户透明的方式动态地给一个对象附加上更多的责任，换言之，客户端并不会觉得对象在装饰前和装饰后有什么不同。装饰模式可以在不需要创造更多子类的情况下，将对象的功能加以扩展。这就是装饰模式的模式动机。
+**装饰模式以对客户透明的方式动态地给一个对象附加上更多的责任，换言之，客户端并不会觉得对象在装饰前和装饰后有什么不同**。装饰模式可以在不需要创造更多子类的情况下，将对象的功能加以扩展。这就是装饰模式的模式动机。
 
 ### 2.3.2 模式定义
-装饰模式(`Decorator Pattern`) ：动态地给一个对象增加一些额外的职责(`Responsibility`)，就增加对象功能来说，装饰模式比生成子类实现更为灵活。其别名也可以称为包装器(`Wrapper`)，与适配器模式的别名相同，但它们适用于不同的场合。根据翻译的不同，装饰模式也有人称之为“油漆工模式”，它是一种对象结构型模式。
+装饰模式(`Decorator Pattern`) ：动态地给一个对象增加一些额外的职责(`Responsibility`)，就增加对象功能来说，装饰模式比生成子类实现更为灵活。其别名也可以称为包装器(`Wrapper`)，与适配器模式的别名相同，但它们适用于不同的场合。
+
+根据翻译的不同，装饰模式也有人称之为“油漆工模式”，它是一种对象结构型模式。
 
 ### 2.3.3 模式结构
 装饰模式包含如下角色：
@@ -1212,6 +1230,13 @@ Builder类：
 - 使用装饰模式来实现扩展比继承更加灵活，它以对客户透明的方式动态地给一个对象附加更多的责任。装饰模式可以在不需要创造更多子类的情况下，将对象的功能加以扩展
 
 ### 2.3.7 实例
+
+**Android**
+
+- Context 本质是一个抽象类，扮演抽象组件的角色。 ContextImpl 是Context的实现类，扮演抽象组件实现类的角色。
+
+- ContextWrapper 继承自Context，并且在内部持有一个Context变量，这个变量由ContextImpl赋值,扮演一个抽象装饰者角色。 
+
 ### 2.3.8 优点
 - 装饰模式与继承关系的目的都是要扩展对象的功能，但是装饰模式可以提供比继承更多的灵活性。
 
@@ -1237,9 +1262,9 @@ Builder类：
 ### 2.3.12 模式扩展
 装饰模式的简化-需要注意的问题:
 
-- 一个装饰类的接口必须与被装饰类的接口保持相同，对于客户端来说无论是装饰之前的对象还是装饰之后的对象都可以一致对待。
+- **一个装饰类的接口必须与被装饰类的接口保持相同**，对于客户端来说无论是装饰之前的对象还是装饰之后的对象都可以一致对待。
 
-- 尽量保持具体构件类Component作为一个“轻”类，也就是说不要把太多的逻辑和状态放在具体构件类中，可以通过装饰类对其进行扩展。 
+- **尽量保持具体构件类Component作为一个“轻”类**，也就是说不要把太多的逻辑和状态放在具体构件类中，可以通过装饰类对其进行扩展。 
 
 - 如果只有一个具体构件类而没有抽象构件类，那么抽象装饰类可以作为具体构件类的直接子类。
 
@@ -1322,6 +1347,11 @@ Builder类：
 - 外观模式从很大程度上提高了客户端使用的便捷性，使得客户端无须关心子系统的工作细节，通过外观角色即可调用相关功能。
 
 ### 2.4.7 实例
+
+**Android**
+
+- ContextImpl 相当于一个外观角色，其功能的具体实现大多不在其子类中，而是通过其他的子系统完成例如：ActivityManagerService完成startActivity(). PackageManagerService 获取应用包相关信息
+
 ### 2.4.8 优点
 
 - 对客户屏蔽子系统组件，减少了客户处理的对象数目并使得子系统使用起来更加容易。通过引入外观模式，客户代码将变得很简单，与之关联的对象也很少。
@@ -1383,7 +1413,7 @@ Builder类：
 
 - 享元模式正是为解决这一类问题而诞生的。享元模式通过共享技术实现相同或相似对象的重用。
 
-- 在享元模式中可以共享的相同内容称为内部状态(`IntrinsicState`)，而那些需要外部环境来设置的不能共享的内容称为外部状态(`Extrinsic State`)，由于区分了内部状态和外部状态，因此可以通过设置不同的外部状态使得相同的对象可以具有一些不同的特征，而相同的内部状态是可以共享的。
+- 在享元模式中**可以共享的相同内容称为内部状态(`IntrinsicState`)**，而那些需要**外部环境来设置的不能共享的内容称为外部状态(`Extrinsic State`)**，由于区分了内部状态和外部状态，**因此可以通过设置不同的外部状态使得相同的对象可以具有一些不同的特征**，而相同的内部状态是可以共享的。
 
 - 在享元模式中通常会出现工厂模式，需要创建一个享元工厂来负责维护一个享元池(`Flyweight Pool`)用于存储具有相同内部状态的享元对象。
 
@@ -1393,8 +1423,9 @@ Builder类：
 
 ### 2.5.2 模式定义
 
-享元模式(`Flyweight Pattern`)：运用共享技术有效地支持大量细粒度对象的复用。系统只使用少量的对象，而这些对象都很相似，状态变化很小，可以实现对象的多次复用。由于享元模式要求能够共享的对象必须是细粒度对象，因此它又称为轻量级模式，它是一种对象结构型模式。
+享元模式(`Flyweight Pattern`)：运用共享技术有效地支持大量细粒度对象的复用。系统只使用少量的对象，而这些对象都很相似，状态变化很小，可以实现对象的多次复用。由于享元模式要求能够共享的对象必须是细粒度对象，因此它又称为轻量级模式
 
+它是一种对象结构型模式。
 
 ### 2.5.3 模式结构
 
@@ -1470,8 +1501,31 @@ Builder类：
 
 - 外部状态是随环境改变而改变的、不可以共享的状态。享元对象的外部状态必须由客户端保存，并在享元对象被创建之后，在需要使用的时候再传入到享元对象内部。一个外部状态与另一个外部状态之间是相互独立的。
 
-
 ### 2.5.7 实例
+
+**Java**
+
+- JDK 中的String 也是类似的消息池,Java中的Stirng 是存在于常量池中，也就是说一个String被定义出来之后会被缓存到常量池中，下次使用同样的String时 直接取出缓存使用。
+
+		String str1 = new String("abc");
+		String str2 = new String("abc");
+		String str3 = "abc";
+		String str4 = "ab"+"c";
+		str1.equals(str2)
+		str1.equals(str3)
+		str2.equals(str3)
+
+		str1!=str2
+		str1!=str3
+		str2!=str3
+		str3==str4
+
+**Android**
+
+- **UI并不是不能在子线程更新，而是不能在不是创建它的线程中更新.**
+
+- Handler + Messagequque 中Message的获取，就是一个享元模式. Message消息池没有使用map这样的容器，而是使用的链表 充当消息池。
+
 ### 2.5.8 优点
 
 - 享元模式的优点在于它可以极大减少内存中对象的数量，使得相同对象或相似对象在内存中只保存一份。
@@ -1532,7 +1586,9 @@ Builder类：
 
 ### 2.6.2 模式定义
 
-代理模式(`Proxy Pattern`) ：给某一个对象提供一个代 理，并由代理对象控制对原对象的引用。代理模式的英 文叫做Proxy或Surrogate，它是一种对象结构型模式。
+代理模式(`Proxy Pattern`) ：给某一个对象提供一个代理，并由代理对象控制对原对象的引用。代理模式的英 文叫做Proxy或Surrogate
+
+它是一种对象结构型模式。
 
 ### 2.6.3 模式结构
 
@@ -1544,7 +1600,7 @@ Builder类：
 
 - Proxy: 代理主题角色
 
-	也被称为委托类或代理类，该类持有一个 真实主题角色的引用，在其所实现的接口方法中调用真实主题类中相应的接口方法即可，以此起到代理的作用
+	也被称为委托类或代理类，该类持有一个真实主题角色的引用，在其所实现的接口方法中调用真实主题类中相应的接口方法即可，以此起到代理的作用
 
 - RealSubject: 真实主题角色
 
@@ -1558,14 +1614,19 @@ Builder类：
 ### 2.6.5 代码分析
 
 	public interface Subject {
-	    void request();
+	    void request1();
+		void request2();
 	}
 	
 	public class RealSubject implements Subject {
 	    @Override
-	    public void request() {
+	    public void request1() {
 	        Log.d("RealSubject", "do something");
 	    }
+		
+		@Override
+		public void request2(){
+		}
 	}
 	
 	public class Proxy implements Subject {
@@ -1577,24 +1638,66 @@ Builder类：
 	        mSubject = new RealSubject();
 	    }
 	
-	    void beforeRequest() {
-	
-	    }
-	
-	    void afterRequest() {
-	
-	    }
-	
 	    @Override
-	    public void request() {
-	        beforeRequest();
-	        mSubject.request();
-	        afterRequest();
+	    public void request1() {
+	        mSubject.request1();
 	    }
+
+		@Override
+		public void request2(){
+			mSubjet.request2();
+		}
 	}
 
 ### 2.6.6 模式分析
+
+代理者模式和装饰者模式区别有：
+
+- 装饰者模式中，被装饰的类可以通过构造方法传入，随时替换。 代理者模式通常只拥有一个固定的被代理类。
+
+- 装饰者模式偏向增加功能，代理者模式偏向限制被代理类.
+
+
+代理模式大致分为俩部分：通过code方面来区分俩种模式，静态代理或动态代理。
+
+- 静态代理：就是生成一些固定的代码再对其进行编译，就是说在代码运行前代理类的class编译文件就已经存在了。静态代理只能为给定接口下的实现类做代理，如果接口不同就需要重新定义不同代理类，较为复杂，但是静态代理更符合面向对象原则。
+
+- 动态代理：通过反射机制动态的生成代理者的对象，也就是说code阶段无需知道代理谁，代理谁在执行阶段再决定。 动态代理通过一个代理类来代理N多个被代理类，其实质是对代理者与被代理者进行解耦。Java提供了便捷的动态代理接口InvocationHandler
+
+		class DynamicProxy implements InvocationHandler {
+		    //被代理的类引用
+		    Object mObject;
+		
+		    public DynamicProxy(Object object) {
+		        mObject = object;
+		    }
+		
+		    @Override
+		    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+		        //调用被代理类的方法
+		        Object result = method.invoke(mObject, args);
+		        return result;
+		    }
+		}
+
+        //创建一个 被代理类
+        Subject subject = new RealSubject();
+        //构造一个动态代理
+        DynamicProxy proxy = new DynamicProxy(subject);
+        //获取 被代理类的Classloader
+        ClassLoader loader = subject.getClass().getClassLoader();
+        //构建出一个代理类
+        Subject subject1 = (Subject) java.lang.reflect.Proxy.newProxyInstance(loader, new Class[]{Subject.class}, proxy);
+        subject1.request1();
+		subject1.request2();
+
 ### 2.6.7 实例
+
+**Android**
+
+- ActivityManagerProxy代理类，具体代理的是ActivityManagerNative的子类ActivityManagerService。
+
+
 ### 2.6.8 优点
 
 - 代理模式能够协调调用者和被调用者，在一定程度上降低了系统的耦合度。
@@ -1686,11 +1789,13 @@ Builder类：
 
 在软件设计中，经常需要向某些对象发送请求，但是并不知道请求的接收者是谁，也不知道被请求的操作是哪个，我们只需在程序运行时指定具体的请求接收者即可，此时，可以使用命令模式来进行设计，使得请求发送者与请求接收者消除彼此之间的耦合，让对象之间的调用关系更加灵活。
 
-命令模式可以对发送者和接收者完全解耦，发送者与接收者之间没有直接引用关系，发送请求的对象只需要知道如何发送请求，而不必知道如何完成请求。这就是命令模式的模式动机。
+**命令模式可以对发送者和接收者完全解耦，发送者与接收者之间没有直接引用关系，发送请求的对象只需要知道如何发送请求，而不必知道如何完成请求。这就是命令模式的模式动机**。
 
 ### 3.1.2 模式定义
 
-命令模式(`Command Pattern`)：将一个请求封装为一个对象，从而使我们可用不同的请求对客户进行参数化；对请求排队或者记录请求日志，以及支持可撤销的操作。命令模式是一种对象行为型模式，其别名为动作(`Action`)模式或事务(`Transaction`)模式。
+命令模式(`Command Pattern`)：将一个请求封装为一个对象，从而可用使用不同的请求对客户参数化；对请求排队或者记录请求日志，以及支持可撤销的操作。
+
+命令模式是一种对象行为型模式，其别名为动作(`Action`)模式或事务(`Transaction`)模式。
 
 ### 3.1.3 模式结构
 命令模式包含如下角色：
@@ -1701,7 +1806,7 @@ Builder类：
 
 - ConcreteCommand: 具体命令类
 
-	实现了Command接口，在execute方法中调用接收者角色的相关方法，在接收者和命令执行的具体行为之间加以弱耦合。**execute通常称为执行方法**
+	实现了Command接口，在execute方法中调用接收者角色的相关方法，在接收者和命令执行的具体行为之间加以弱耦合。
 
 - Invoker: 调用者
 	
@@ -1709,7 +1814,7 @@ Builder类：
 
 - Receiver: 接收者
 
-	该类负责具体实施或执行一个请求，简而言之：执行具体逻辑的角色。任何一个类都可以成为一个接收者，而**在接收者类中封装具体操作逻辑的方法则称为行动方法**。
+	**该类负责具体实施或执行一个请求**，简而言之：执行具体逻辑的角色。任何一个类都可以成为一个接收者。
 
 - Client:客户类
 
@@ -1781,6 +1886,11 @@ Builder类：
 - **命令模式的关键在于引入了抽象命令接口，且发送者针对抽象命令接口编程，只有实现了抽象命令接口的具体命令才能与接收者相关联。**
 
 ### 3.1.7 实例
+
+**Android**
+
+- 事件逻辑的底层实现..
+
 ### 3.1.8 优点
 
 - 降低系统的耦合度。
@@ -1807,6 +1917,61 @@ Builder类：
 
 
 ### 3.1.11 模式应用
+
+俄罗斯方块：
+
+- Receiver 具体执行逻辑的角色
+
+		class TetrisMachine {
+		    public void toLeft(){
+		        //具体的逻辑向左
+		    }
+		    
+		    public void toRight(){
+		        
+		    }
+		    
+		    public void fastDown(){
+		        
+		    }
+		    
+		    public void transform(){
+		        
+		    }
+		}
+
+- Command 抽象的命令
+
+		interface Command {
+		
+		    void execute();
+		}
+
+- ConcreateCommand 具体的命令，持有Receiver对象，具体操作交给Receiver...
+
+		class LeftCommand implements Command {
+		
+		    TetrisMachine mTetrisMachine;
+		
+		    public LeftCommand(TetrisMachine tetrisMachine) {
+		        mTetrisMachine = tetrisMachine;
+		    }
+		
+		    @Override
+		    public void execute() {
+		        mTetrisMachine.toLeft();
+		    }
+		}
+
+- Invoker 请求者
+
+		Button leftBtn = (Button)findViewById(R.id.btn_left);
+		leftBtn.setOnClickListener(new OnClickListener(){
+			@Override
+            public void onClick(View v) {
+                leftCommand.execute();
+            }
+		});
 
 ### 3.1.12 模式扩展
 
@@ -1845,7 +2010,9 @@ Builder类：
 
 ### 3.2.2 模式定义
 
-中介者模式(`Mediator Pattern`)定义：用一个中介对象来封装一系列的对象交互，中介者使各对象不需要显式地相互引用，从而使其耦合松散，而且可以独立地改变它们之间的交互。中介者模式又称为调停者模式，它是一种对象行为型模式。
+中介者模式(`Mediator Pattern`)定义：用一个中介对象来封装一系列的对象交互，中介者使各对象不需要显式地相互引用，从而使其耦合松散，而且可以独立地改变它们之间的交互。
+
+中介者模式又称为调停者模式，它是一种对象行为型模式。
 
 ### 3.2.3 模式结构
 
@@ -1857,11 +2024,11 @@ Builder类：
 
 - ConcreteMediator: 具体中介者
 
-	继承于抽象中介者，实现了父类定义的方法，它从具体的同事对象接收消息，向具体的同事对象发出命令
+	继承于抽象中介者，实现了父类定义的方法，**它从具体的同事对象接收消息，向具体的同事对象发出命令**
 
 - Colleague: 抽象同事类
 
-	定义了中介者对象的接口，只知道中介者而不知道其他的同事对象
+	定义了中介者对象的接口，**只知道中介者而不知道其他的同事对象**
 
 - ConcreteColleague: 具体同事类
 
@@ -1897,7 +2064,7 @@ Builder类：
 	public class ConcreateMediator extends Mediator {
 	    @Override
 	    public void method() {
-			//由中介者去实现剩余的逻辑
+			//由中介者去实现剩余的逻辑,可以添加参数并通过参数判断具体逻辑
 	        mConcreateColleagueB.action();
 	    }
 	}
@@ -1951,13 +2118,17 @@ Builder类：
 
 ### 3.2.7 实例
 
-实例：虚拟聊天室
+**实例：虚拟聊天室**
 
 某论坛系统欲增加一个虚拟聊天室，允许论坛会员通过该聊天室进行信息交流，普通会员(CommonMember)可以给其他会员发送文本信息，钻石会员(DiamondMember)既可以给其他会员发送文本信息，还可以发送图片信息。该聊天室可以对不雅字符进行过滤，如“日”等字符；还可以对发送的图片大小进行控制。用中介者模式设计该虚拟聊天室。
 
 ![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/Mediator_eg.jpg)
 
 ![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/seq_Mediator_eg.jpg)
+
+**Android**
+
+- Keyguard 锁屏的功能实现。KeyguardViewMediator 是充当中介者的类，这个类当中存在许多管理器，也就是同事类。
 
 ### 3.2.8 优点
 
