--- a/设计模式学习笔记/设计模式学习笔记.md
+++ b/设计模式学习笔记/设计模式学习笔记.md
@@ -1,5 +1,5 @@
 # 设计模式
-[UML类图和时序图](http://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#id1)
+[UML类图和时序图](http://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#id1)  
 [UML-wiki 统一建模语言](https://zh.wikipedia.org/wiki/%E7%BB%9F%E4%B8%80%E5%BB%BA%E6%A8%A1%E8%AF%AD%E8%A8%80)
 
 **在Android源码中寻找指定设计模式的代码，可以搜索模式的名称，Android源码命名相当规范！**
@@ -12,6 +12,7 @@
 	* [1.3抽象工厂模式](#13)
 	* [1.4建造者模式](#14)
 	* [1.5单例模式](#15)
+	* [1.6原型模式](#16)TODO
 
 * [2 结构型模式](#2)
 	* [2.1 适配器模式](#21)
@@ -20,12 +21,19 @@
 	* [2.4 外观模式](#24)
 	* [2.5 享元模式](#25)
 	* [2.6 代理模式](#26)
+	* [2.7 组合模式](#27)TODO
 * [3 行为型模式](#3)
 	* [3.1 命令模式](#31)
 	* [3.2 中介者模式](#32)
 	* [3.3 观察者模式](#33)
 	* [3.4 状态模式](#34)
 	* [3.5 策略模式](#35)
+	* [3.6 职责链模式](#36)TODO
+	* [3.7 解释器模式](#37)TODO
+	* [3.8 迭代器模式](#38)TODO
+	* [3.9 备忘录模式](#39)TODO
+	* [3.10 模板方法模式](#310)TODO
+	* [3.11 访问者模式](#311)TODO
 
 
 <span id="1"></span>
@@ -2130,6 +2138,8 @@ Builder类：
 
 - Keyguard 锁屏的功能实现。KeyguardViewMediator 是充当中介者的类，这个类当中存在许多管理器，也就是同事类。
 
+- Activity 中的 控件管理就可以看做是中介者模式，例如一个EditText 会改变 Button 是否可用,这俩个控件都在Activity中，其次 他们相互并不知道，而是通过Activity影响其他控件。
+
 ### 3.2.8 优点
 
 - 简化了对象之间的交互。
@@ -2203,7 +2213,7 @@ Builder类：
 
 观察者模式包含如下角色：
 
-- Subject: 目标
+- Subject: 抽象目标 Observerable
 
 	被观察的角色，抽象主题角色把所有观察者对象的引用保存在一个集合里，每个观察目标都可以有任意数量的观察者，抽象观察目标提供接口，用来增加或减少观察者对象
 
@@ -2286,6 +2296,15 @@ Builder类：
 - 作为对这个通知的响应，每个观察者都将即时更新自己的状态，以与目标状态同步，这种交互也称为发布-订阅(publishsubscribe)。目标是通知的发布者，它发出通知时并不需要知道谁是它的观察者，可以有任意数目的观察者订阅它并接收通知。
 
 ### 3.3.7 实例
+
+**Java**
+
+- 在JDK的java.util包中，提供了Observable类以及Observer接口，它们构成了Java语言对观察者模式的支持。
+
+**Android**
+
+- ListView 中Adapter的notifyDataSetChanged()方法。。Adapter就是观察目标，AbsListView中的AdapterDataSetObserver就是观察者(它有一个onChanged方法，会对变化的数据进行处理)
+
 ### 3.3.8 优点
 
 - 观察者模式可以实现表示层和数据逻辑层的分离，并定义了稳定的消息更新传递机制，抽象了更新接口，使得可以有各种各样不同的表示层作为具体观察者角色。
@@ -2328,7 +2347,6 @@ Builder类：
 
 - 观察者模式适用情况包括：一个抽象模型有两个方面，其中一个方面依赖于另一个方面；一个对象的改变将导致其他一个或多个对象也发生改变，而不知道具体有多少对象将发生改变；一个对象必须通知其他对象，而并不知道这些对象是谁；需要在系统中创建一个触发链。
 
-- 在JDK的java.util包中，提供了Observable类以及Observer接口，它们构成了Java语言对观察者模式的支持。
 
 
 <span id="34"></span>
@@ -2421,6 +2439,11 @@ Builder类：
 - 抽象状态类可以是抽象类，也可以是接口，不同状态类就是继承这个父类的不同子类，状态类的产生是由于环境类存在多个状态，同时还满足两个条件： 这些状态经常需要切换，在不同的状态下对象的行为不同。因此可以将不同对象下的行为单独提取出来封装在具体的状态类中，使得环境类对象在其内部状态改变时可以改变它的行为，对象看起来似乎修改了它的类，而实际上是由于切换到不同的具体状态类实现的。由于环境类可以设置为任一具体状态类，因此它针对抽象状态类进行编程，在程序运行时可以将任一具体状态类的对象设置到环境类中，从而使得环境类可以改变内部状态，并且改变行为。
 
 ### 3.4.7 实例
+
+**Android**
+
+- 登录状态！一个App 登录时 与 不登录时 能做的操作是不同的. 可以定义一个Context 环境类， 将登录的操作抽象成 State~ 具体的state 有 登录 和未登录 ，在这里有具体的操作逻辑.
+
 ### 3.4.8 优点
 
 - 封装了转换规则。
@@ -2550,6 +2573,11 @@ Builder类：
 - 策略模式仅仅封装算法，提供新算法插入到已有系统中，以及老算法从系统中“退休”的方便，策略模式并不决定在何时使用何种算法，算法的选择由客户端来决定。这在一定程度上提高了系统的灵活性，但是客户端需要理解所有具体策略类之间的区别，以便选择合适的算法，这也是策略模式的缺点之一，在一定程度上增加了客户端的使用难度。
 
 ### 3.5.7 实例
+
+**Android**
+
+- 属性动画的 插值器!
+
 ### 3.5.8 优点
 
 - 策略模式提供了对“开闭原则”的完美支持，用户可以在不修改原有系统的基础上选择算法或行为，也可以灵活地增加新的算法或行为。
