--- a/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
+++ b/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
@@ -7,14 +7,19 @@
 
 **参考文章可以总结出qq空间热修复的步骤**：
 - 动态加载补丁dex，并将补丁dex插入到dexElements最前面
+
 - 要实现热更新，需要热更新的类要防止被打上ISPREVERIFIED标记，关于这个标记请阅读文章
 
 
 1. 要实现第一点，需要通过DexClassLoader对象，将补丁dex对象加载进来，再通过反射将补丁dex插入到dexElements最前面即可。参考：[Google-Multidex](https://developer.android.com/studio/build/multidex.html?hl=zh-cn)
 2. 要实现第二点，就是将所有类的构造函数中，引用另一个`hack.dex`中的类，这个类叫`Hack.class`，然后在加载补丁`patch.dex`前动态加载这个`hack.dex`，**但是有一个类的构造函数中不能引用`Hack.class`，这个类就是Application类的子类，一旦这个类的构造函数中加入Hack.class这个类，那么程序运行时就会找不到`Hack.class`这个类，因为还没有被加载**。也就是说，一个类直接引用到的类不在同一个dex中即可。这样，就能防止类被打上`ISPREVERIFIED`标记并能进行热更新
 
+# 2.动态加载补丁dex,并将补丁插入到dexElements最前面
 
-# 2. Gradle插件实现代码插入(1.5以下版本)
+
+# 3.阻止待热更新的类被打上ISPREVERIFIED标记
+
+# 4. Gradle插件实现代码插入(1.5以下版本)
 
 >**注意：接下来的例子都是基于 gradle-tools 1.2.3`,gradle 2.9**
 >
