--- a/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
+++ b/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
@@ -1,8 +1,11 @@
 # 参考链接
 [Android 热修复Nuwa的原理以及Gradle插件源码解析](http://blog.csdn.net/sbsujjbcy/article/details/50812674)
- 
 
-# 1.热修复技术
+[Google-Multidex](https://developer.android.com/studio/build/multidex.html?hl=zh-cn)
+
+[热修复实现：ClassLoader方式的实现](https://jaeger.itscoder.com/android/2016/09/20/nuva-source-code-analysis)
+
+# 1.热修复技术-qzone方案
 [qzone-安卓APP热补丁动态修复技术介绍](https://mp.weixin.qq.com/s?__biz=MzI1MTA1MzM2Nw==&mid=400118620&idx=1&sn=b4fdd5055731290eef12ad0d17f39d4a&scene=0#wechat_redirect)
 
 **参考文章可以总结出qq空间热修复的步骤**：
@@ -11,15 +14,21 @@
 - 要实现热更新，需要热更新的类要防止被打上ISPREVERIFIED标记，关于这个标记请阅读文章
 
 
-1. 要实现第一点，需要通过DexClassLoader对象，将补丁dex对象加载进来，再通过反射将补丁dex插入到dexElements最前面即可。参考：[Google-Multidex](https://developer.android.com/studio/build/multidex.html?hl=zh-cn)
+1. 要实现第一点，需要通过DexClassLoader对象，将补丁dex对象加载进来，再通过反射将补丁dex插入到dexElements最前面即可。参考：
+
 2. 要实现第二点，就是将所有类的构造函数中，引用另一个`hack.dex`中的类，这个类叫`Hack.class`，然后在加载补丁`patch.dex`前动态加载这个`hack.dex`，**但是有一个类的构造函数中不能引用`Hack.class`，这个类就是Application类的子类，一旦这个类的构造函数中加入Hack.class这个类，那么程序运行时就会找不到`Hack.class`这个类，因为还没有被加载**。也就是说，一个类直接引用到的类不在同一个dex中即可。这样，就能防止类被打上`ISPREVERIFIED`标记并能进行热更新
 
-# 2.动态加载补丁dex,并将补丁插入到dexElements最前面
+## 1.1 动态加载补丁dex,并将补丁插入到dexElements最前面
 
+- 在Android中，App安装到手机之后，apk里面的classes.dex中的class都是通过PathClassLoader加载的
 
-# 3.阻止待热更新的类被打上ISPREVERIFIED标记
+- DexClassLoader可以用来加载SD卡上包含classes.dex的.jar或.apk文件
 
-# 4. Gradle插件实现代码插入(1.5以下版本)
+- DexClassLoader和PathClassLoader的基类
+
+## 1.2 阻止待热更新的类被打上ISPREVERIFIED标记
+
+## 1.2.1 Gradle插件实现代码插入(1.5以下版本)
 
 >**注意：接下来的例子都是基于 gradle-tools 1.2.3`,gradle 2.9**
 >
@@ -43,12 +52,12 @@
 	- 如何在构造函数中注入代码
 
 
-## 2.1 如何在构造函数中注入代码
+### 1.2.2 如何在构造函数中注入代码
 - 字节码注入可以通过ASM 来实现
 
 - ` compile 'org.ow2.asm:asm-all:5.0.4'`
 
-### 2.2 如何判断preDex是否开启？
+### 1.2.3 如何判断preDex是否开启？
 - 如果使用了Multidex 并且没有混淆，在dex任务之前会生成一个jar文件，包含了所有的class，即使混淆了，也是proguard之后的一个jar包
 
 - `preDex`会在dex任务之前将所有的库工程和第三方jar包提前打成dex，下次运行只需要重新dex被修改的库，以此节省时间
