--- a/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
+++ b/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
@@ -6,27 +6,62 @@
 [热修复实现：ClassLoader方式的实现](https://jaeger.itscoder.com/android/2016/09/20/nuva-source-code-analysis)
 
 # 1.热修复技术-qzone方案
-[qzone-安卓APP热补丁动态修复技术介绍](https://mp.weixin.qq.com/s?__biz=MzI1MTA1MzM2Nw==&mid=400118620&idx=1&sn=b4fdd5055731290eef12ad0d17f39d4a&scene=0#wechat_redirect)
+[小米5c](https://mp.weixin.qq.com/s?__biz=MzI1MTA1MzM2Nw==&mid=400118620&idx=1&sn=b4fdd5055731290eef12ad0d17f39d4a&scene=0#wechat_redirect)
 
 **参考文章可以总结出qq空间热修复的步骤**：
-- 动态加载补丁dex，并将补丁dex插入到dexElements最前面
+- **动态加载补丁dex，并将补丁dex插入到dexElements最前面**
 
-- 要实现热更新，需要热更新的类要防止被打上ISPREVERIFIED标记，关于这个标记请阅读文章
-
-
-1. 要实现第一点，需要通过DexClassLoader对象，将补丁dex对象加载进来，再通过反射将补丁dex插入到dexElements最前面即可。参考：
-
-2. 要实现第二点，就是将所有类的构造函数中，引用另一个`hack.dex`中的类，这个类叫`Hack.class`，然后在加载补丁`patch.dex`前动态加载这个`hack.dex`，**但是有一个类的构造函数中不能引用`Hack.class`，这个类就是Application类的子类，一旦这个类的构造函数中加入Hack.class这个类，那么程序运行时就会找不到`Hack.class`这个类，因为还没有被加载**。也就是说，一个类直接引用到的类不在同一个dex中即可。这样，就能防止类被打上`ISPREVERIFIED`标记并能进行热更新
+- **要实现热更新，需要热更新的类要防止被打上ISPREVERIFIED标记**，关于这个标记请阅读文章
 
 ## 1.1 动态加载补丁dex,并将补丁插入到dexElements最前面
 
-- 在Android中，App安装到手机之后，apk里面的classes.dex中的class都是通过PathClassLoader加载的
+**需要通过DexClassLoader对象，将补丁dex对象加载进来，再通过反射将补丁dex插入到dexElements最前面即可。**
+
+- 在Android中，App安装到手机之后，apk里面的classes.dex中的class都是通过`PathClassLoader`加载的
 
 - DexClassLoader可以用来加载SD卡上包含classes.dex的.jar或.apk文件
 
-- DexClassLoader和PathClassLoader的基类
+- DexClassLoader和PathClassLoader的基类BaseDexClassLoader 的`findClass()`具体实现由BDCL的成员变量`DexPathList pathList`的`findClass()`方法完成
+
+- DexPathList内部有一个`Element[] dexElements`数组,其`findClass()`方法的实现就是遍历数组去查找class，一旦找到 就直接返回，停止遍历。
+
+### 1.1.1 实现思路
+
+![](http://ac-qygvx1cc.clouddn.com/b1c92f1555e7fb4b.jpg)
+
+### 1.1.2 实现步骤
+
+1. 假设 MainActivity 中有一个方法showMsg ，现在显示的是 “bug” ，需要修复。
+
+		public class MainActivity extends AppCompatActivity {
+		    ...
+		    public void showMsg() {
+		        Toast.makeText(this, "bug", Toast.LENGTH_SHORT).show();
+		    }
+		}
+
+2. 修改MainActivity的showMsg方法
+
+		public void showMsg() {
+		    Toast.makeText(this, "message", Toast.LENGTH_SHORT).show();
+		}
+
+3. 制作补丁包，即 patch.jar 文件，该 patch.jar 文件中就包含已经修复了的 dex 文件，注意此时 patch.jar 会包含一个和原来安装 apk 文件中同样的类 MainActivity 。
+
+4. 在 Application 的 onCreate 方法中检测是否已经下载好补丁包，如果存在补丁包，就通过 DexClassLoader 加载 patch.jar，然后通过反射拿到 DexClassLoader 中的 DexPathList 对象，进而拿到 Element[] dexElements 数组，这里标记该 Element 数组为 newDexElements 。
+
+5. 还是通过反射，拿到 App 默认的 ClassLoader 即 PathClassLoader 的 DexPathList 对象，进而拿到 Element 数组，这里标记下该数组为 baseDexElements 。
+
+6. 将 newDexElements 和 baseDexElements 合成一个新的数组 allDexElements ，且保证 newDexElements 中的值在 allDexElements 数组的最前面。
+
+7. 然后还是通过通过反射，将合成的 Element 数组设置给 PathClassLoader 的 DexPathList 对象。
+
+8. 在 Application 完成初始化之后，会开始加载 MainActivity ，加载过程就是通过 DexPathList 对象的 findClass() 方法来完成的，会从头开始遍历其 Element 数组，会优先查找到之前插入的补丁包中的 dexFile，而原 apk 中的则不会查找到，因此就实现了热修复的目的。
 
 ## 1.2 阻止待热更新的类被打上ISPREVERIFIED标记
+
+就是将所有类的构造函数中，引用另一个`hack.dex`中的类，这个类叫`Hack.class`，然后在加载补丁`patch.dex`前动态加载这个`hack.dex`，**但是有一个类的构造函数中不能引用`Hack.class`，这个类就是Application类的子类，一旦这个类的构造函数中加入Hack.class这个类，那么程序运行时就会找不到`Hack.class`这个类，因为还没有被加载**。也就是说，一个类直接引用到的类不在同一个dex中即可。这样，就能防止类被打上`ISPREVERIFIED`标记并能进行热更新
+
 
 ## 1.2.1 Gradle插件实现代码插入(1.5以下版本)
 
