--- a/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
+++ b/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
@@ -6,7 +6,7 @@
 [热修复实现：ClassLoader方式的实现](https://jaeger.itscoder.com/android/2016/09/20/nuva-source-code-analysis)
 
 # 1.热修复技术-qzone方案
-[小米5c](https://mp.weixin.qq.com/s?__biz=MzI1MTA1MzM2Nw==&mid=400118620&idx=1&sn=b4fdd5055731290eef12ad0d17f39d4a&scene=0#wechat_redirect)
+[qzone-热修复方案](https://mp.weixin.qq.com/s?__biz=MzI1MTA1MzM2Nw==&mid=400118620&idx=1&sn=b4fdd5055731290eef12ad0d17f39d4a&scene=0#wechat_redirect)
 
 **参考文章可以总结出qq空间热修复的步骤**：
 - **动态加载补丁dex，并将补丁dex插入到dexElements最前面**
