--- a/view/1.1绘制基础/1-1绘制基础.md
+++ b/view/1.1绘制基础/1-1绘制基础.md
@@ -8,7 +8,7 @@
 - Paint.setStyle() 设置绘制模式  
 - Paint.setColor() 设置颜色  
 - Paint.setStrokeWidth() 设置线条宽度  
-- Paint.setTextSize() 设置蚊子大小    
+- Paint.setTextSize() 设置文字大小    
 - Paint.setAntiAlias() 设置抗锯齿开关   
 
 - Canvas  drawColor drawARGB drawRGB
@@ -81,7 +81,6 @@ Path有俩大类方法
 	第二组xxxTo() 画线（直线或曲线）的方法   
 	moveTo(移动下次操作的起点位置)，setLastPoint(也是移动下次操作的起点位置，同时会影响上次操作的终点位置) , close(封闭路径，如果，连接了终点和起点但不能形成封闭图形，close 什么都不做)  
 	类似rXXXTo的方法，都是使用的相对坐标！其他不带r的 是使用的绝对坐标
-
 
 2. **辅助的设置或计算**  
 	Path setFillType设置填充方式，用来设置图形相交时的填充算法    
