--- a/view/1.1绘制基础/1-1绘制基础.md
+++ b/view/1.1绘制基础/1-1绘制基础.md
@@ -179,7 +179,7 @@ with c = 0.551915024494f
 
 - boolean getMatrix(float distance,Matrix matrix,int flags)
 	distance:距离 Path 起点的长度	  
-	matrix:根据 falgs 封装好的matrix	  
+	matrix:根据 flags 封装好的matrix	  
 	flags:规定哪些内容会存入到matrix中
 
 ---
@@ -189,6 +189,7 @@ with c = 0.551915024494f
 ![](http://ww1.sinaimg.cn/large/6ab93b35gy1fild913bo2j20gi0imt9b.jpg)
 
 ### 1.4 Region
+[Region分析](http://blog.csdn.net/harvic880925/article/details/39056701)
 
 - 利用setPath()构造不规则区域
 	>Path path：用来构造的区域的路径
