--- a/view/1.3文字绘制/1-3文字的绘制.md
+++ b/view/1.3文字绘制/1-3文字的绘制.md
@@ -161,4 +161,4 @@ text 是要测量的文字；start end 是文字的起始和结束坐标；conte
 
 
 #### 2.2.8 hasGlyph(String str)
-检查指定的字符串中是否是一个单独的字形(glyph).
+检查指定的字符串中是否是一个单独的字形(glyph).（在插入之前，检查设备是否包含表情符号）
