--- a/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
+++ b/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
@@ -29,6 +29,8 @@
 
 ![](http://ac-qygvx1cc.clouddn.com/b1c92f1555e7fb4b.jpg)
 
+![](https://upload-images.jianshu.io/upload_images/4050443-20afe8a790dcaa91.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/700)
+
 ### 1.1.2 实现步骤
 
 1. 假设 MainActivity 中有一个方法showMsg ，现在显示的是 “bug” ，需要修复。
@@ -46,7 +48,7 @@
 		    Toast.makeText(this, "message", Toast.LENGTH_SHORT).show();
 		}
 
-3. 制作补丁包，即 patch.jar 文件，该 patch.jar 文件中就包含已经修复了的 dex 文件，注意此时 patch.jar 会包含一个和原来安装 apk 文件中同样的类 MainActivity 。
+3. 制作补丁包，即 patch.jar 文件，该 patch.jar 文件中包含已经修复了的 dex 文件(通过dx.bat文件生成)，注意此时 patch.jar需要包含一个和原来安装 apk 文件中同样的类 MainActivity 。
 
 4. 在 Application 的 onCreate 方法中检测是否已经下载好补丁包，如果存在补丁包，就通过 DexClassLoader 加载 patch.jar，然后通过反射拿到 DexClassLoader 中的 DexPathList 对象，进而拿到 Element[] dexElements 数组，这里标记该 Element 数组为 newDexElements 。
 
@@ -58,7 +60,17 @@
 
 8. 在 Application 完成初始化之后，会开始加载 MainActivity ，加载过程就是通过 DexPathList 对象的 findClass() 方法来完成的，会从头开始遍历其 Element 数组，会优先查找到之前插入的补丁包中的 dexFile，而原 apk 中的则不会查找到，因此就实现了热修复的目的。
 
-## 1.2 阻止待热更新的类被打上ISPREVERIFIED标记
+## 1.2 CLASS_SPREVERIFIED标记
+
+odex 文件是 OptimizedDEX 的缩写，表示经过优化的 dex 文件。由于 Android 程序的 apk 文件为 zip 压缩包格式，Dalvik虚拟机每次加载都需要从 apk 中读取 classes.dex 文件，这会耗费很多 cpu 时间，而采用 odex 方式优化的 dex 文件已经包含了加载 dex 必须的依赖库文件列表，Dalvik 虚拟机只需检测并加载所需的依赖库即可执行相应的 dex 文件，大大缩短了读取 dex 文件所需的时间。同时，Android专门提供了一个验证与优化 dex 文件的工具 dexopt，Dalvik 虚拟机在加载一个 dex 文件时，通过指定的验证与优化选项来调用 dexopt 进行相应的验证与优化操作。
+
+**在dex优化过程中：**
+
+- 如果在某个类的方法中有直接引用到的类(第一层关系，不会进行递归搜索)在同一个dex中的话，那么这个类就会被打上`CLASS_ISPREVERIFIED`标志
+
+	Classloader方式实现的热修复，需要从不同的的dex文件中寻找类。**为了防止打上这个标志，只需要在每个类中引用一个单独的dex中的类即可。需要确保这个单独的dex包必须被先加载进来，否则会导致类不存在。注意`Application`中不能添加这个类(因为载入防止标志的dex包是在application的oncreate方法中载入的，如果在application的构造函数中加载这段代码，那么就是在载入dex包之前就使用了dex包中的类，该类一次找不到，就会永远被打上找不到的标志)**
+
+	插入外部类防止打上`CLASS_ISPREVERIFIED`标志的操作也叫打桩，**打桩会影响类加载的性能**
 
 就是将所有类的构造函数中，引用另一个`hack.dex`中的类，这个类叫`Hack.class`，然后在加载补丁`patch.dex`前动态加载这个`hack.dex`，**但是有一个类的构造函数中不能引用`Hack.class`，这个类就是Application类的子类，一旦这个类的构造函数中加入Hack.class这个类，那么程序运行时就会找不到`Hack.class`这个类，因为还没有被加载**。也就是说，一个类直接引用到的类不在同一个dex中即可。这样，就能防止类被打上`ISPREVERIFIED`标记并能进行热更新
 
@@ -176,3 +188,10 @@
 	1. 对于debug构建，没有开启混淆，dex的task输入文件是一个allclasses.jar
 	2. 对于release构建，开启了混淆 ,dex的task输入文件是混淆过后的classes.jar
 	3. 可以得出结论，只要开启了Multidex 是不存在`preDex`这个Task的,**这样就需要针对有无preDex,做不同的修改字节码的策略**
+
+# 2.问题
+
+无论是使用插入pathlist还是parent classloader的方式，若补丁修改的class已经存在与app image，它们都是无法通过热补丁更新的。它们在启动app时已经加入到PathClassloader的ClassTable中，系统在查找类时会直接使用base.apk中的class。
+
+
+- 在Android N上,[利用ClassLoader进行热修复会出现错误](https://mp.weixin.qq.com/s?__biz=MzAwNDY1ODY2OQ==&mid=2649286341&idx=1&sn=054d595af6e824cbe4edd79427fc2706&scene=0##)
