--- a/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
+++ b/AOP/热修复Nuwa原理及其插件原理/热修复及其插件原理.md
@@ -5,6 +5,8 @@
 
 [热修复实现：ClassLoader方式的实现](https://jaeger.itscoder.com/android/2016/09/20/nuva-source-code-analysis)
 
+[微信Android热修复实践演进之路](https://github.com/WeMobileDev/article/blob/master/%E5%BE%AE%E4%BF%A1Android%E7%83%AD%E8%A1%A5%E4%B8%81%E5%AE%9E%E8%B7%B5%E6%BC%94%E8%BF%9B%E4%B9%8B%E8%B7%AF.md#rd)
+
 # 1.热修复技术-qzone方案
 [qzone-热修复方案](https://mp.weixin.qq.com/s?__biz=MzI1MTA1MzM2Nw==&mid=400118620&idx=1&sn=b4fdd5055731290eef12ad0d17f39d4a&scene=0#wechat_redirect)
 
