--- a/锁屏/锁屏.md
+++ b/锁屏/锁屏.md
@@ -37,7 +37,7 @@ FrameInstance类IsDEBUG是判断是否使用本地FrameCoreNew版本
 [JobScheduler 介绍](https://www.jianshu.com/p/9fb882cae239)
 [JobScheduler 介绍2](https://www.jianshu.com/p/be0f3cc505ec)
 
-## 1.3 Scheduler-JobService
+## 1.3 KeepService-JobService
 
 获取imei，注册广播
 
@@ -104,9 +104,51 @@ FrameInstance类IsDEBUG是判断是否使用本地FrameCoreNew版本
 
 ## 1.4 FrameInstance
 
+- displayPushActivityEx
+
+	调用FrameCore类的displayPushActivityEx
+
+- DownloadFinish
+
+	调用FrameCore类的DownloadFinish
+
+- StartAdver
+
+	调用FrameCore类的StartAdver
+
+- onInstallReceive
+
+	FrameCore.onInstallReceive
+
 ### 1.4.1 constuction
 
 定义了一个Handler
+
+- ON_JAR_UPDATE:
+
+	获取下载的url，调用`startDownloadFrameCore(url)`去下载
+
+- ON_JAR_LOAD：
+
+	onDownload(true);
+	
+	去加载 下载过来的.jar文件，创建DexClassLoader
+
+- ON_START:
+
+- ON_PROGRESS:
+
+- ON_SUCCESS:
+
+	onDownload(true)
+
+- ON_FAIL:
+
+	onDownload(false),do nothing
+
+- ON_CANCEL:
+
+
 
 ### 1.4.2 InitLogic
 
@@ -115,11 +157,116 @@ FrameInstance类IsDEBUG是判断是否使用本地FrameCoreNew版本
 - true:
 
 		loadFrameCoreDebug(Context c)
+	如果加载FrameCore类成功，就会去执行FrameCoreNew里的内容
 
 - false：
 
+	传入VersionId,version.通过 get请求去获取info.pck文件 。
+
+		{"version":[{"vid":22,"m":"18b34b8e6e9c9fae641d4850c6301974","u":"http://r8848.oss-cn-hangzhou.aliyuncs.com/sdk/framecore.jar"}]}
+
+	判断本地和线上的framecore.jar版本是否一致。如果不一致 发送`ON_JAR_UPDATE`的message，否则发送`ON_JAR_LOAD`的message
+
+	本地framecore.jar文件不存在，就去下载，发送`ON_JAR_UPDATE`
+
 ### 1.4.3 loadFrameCoreDebug（Cotnext c）
 
+从apk的assets目录中复制framecore.jar到`getFilesDir()`目录下，这个.jar包应该是包含.dex文件，创建一个DexClassLoader去加载该.jar包
 
+**利用该DexClassLoader 去加载 `com.lance.framecore.externex.FrameCore`,核心就是这个功能**
+
+### 1.4.4 startDownloadFrameCore(url)
+
+判断当前是否正在下载，有则直接返回。然后创建 `DownloadJARProxy`开启下载`startDownloadTask`
+
+
+## 1.5 DownloadJARProxy
+
+### 1.5.1 startDownloadTask(url,dstPath)
+
+判断当前是否有正在下载的任务，如果有则 等待下载完成。否则 创建DownloadJarTask 去下载
+
+		protected boolean isInterrupt = false;
+	
+		public void interrupt(){
+			isInterrupt = true;
+		}
+		
+		public boolean isInterrupt(){
+			return isInterrupt;
+		}
+		
+		public abstract void onStart();
+		public abstract void onProgress(int current, int max);
+		public abstract void onSuccess();
+		public abstract void onFail();
+		public abstract void onCancel();
+
+根据DownloadJarTask 发送不同的message
+
+## 1.6 DownloadJARTask
+
+根据下载成功失败 会回调不同的接口，这个接口在DownLoadJARProxy中实现
 
 # 2. FrameCoreNew
+
+## 2.1 FrameCore类
+
+代理类，所有操作都转交给 FrameEngine去做
+
+## 2.2 FrameEngine类
+
+### 2.2.1 startEngine(Context)
+
+将isEngineStart置为true
+
+
+## 2.3 FileManager类
+
+### 2.3.1 construction()
+
+1. 获取imei
+
+2. 获取appkey
+
+3. appkey 如果为特定值(2e2f825c27153c9405865242039ff3ea),获取applist 组成一条json并上传
+
+4. 创建数据库对象
+
+5. 下载资源文件
+
+### 2.3.2 getInstance()
+
+创建 FileManger对象
+
+### 2.3.3 CreateDirCacah（）
+
+创建data/data/pkg/files/images路径，如果该路径不为空，会删除除了`res.zip`之外的文件
+
+创建data/data/pkg/files 路径，如果路径不为空，会删除 .apk 文件
+
+
+
+## 2.4 Until 类
+
+### 2.4.1 getApplicationMetaData(Context,String)
+
+根据传入的str 从清单文件中取值并返回
+
+如果传入的str是SqcpKey，会优先从sp中获取，然后再去清单文件中获取
+
+## 2.5 HttpUtil 类
+
+### 2.5.1 GetAppList(Context)
+
+拼装一条json...
+
+### 2.5.2 HttpPost(String)
+
+上传json
+
+## 2.6 ActivityMgr类
+
+### 2.6.1 DownloadRes(Context,Handler)
+
+获取 WallpaperManager(墙纸管理器)
