update  动态加载.md

--- a/AOP/插件化/动态加载.md
+++ b/AOP/插件化/动态加载.md
@@ -4,6 +4,8 @@
 
 [Android动态加载技术介绍](https://segmentfault.com/a/1190000004062866)
 
+[Android动态加载资源文件](https://www.jianshu.com/p/cb639a8c9921)
+
 # 1. 定义
 
 动态加载的定义：
