--- a/AOP/插件化/插件化.md
+++ b/AOP/插件化/插件化.md
@@ -4,6 +4,8 @@
 
 [Andoird 插件化框架总结](https://juejin.im/entry/59decdf36fb9a0451c39621b)
 
+[Android插件化原理解析——概要](http://weishu.me/2016/01/28/understand-plugin-framework-overview/)
+
 # 1. 简介
 
 首先需要明确的一点，**插件化和热修复不是同一个概念**，虽然站在技术实现的角度来说，他们都是从系统加载器的角度出发，无论是采用hook方式，亦或是代理方式或者是其他底层实现，都是通过“欺骗”Android 系统的方式来让宿主正常的加载和运行插件（补丁）中的内容；但是二者的出发点是不同的。
@@ -15,7 +17,19 @@
 **插件化所衍生出来的内容：**
 ![](https://upload-images.jianshu.io/upload_images/1115031-70a55fecac4da43b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/543)
 
+# 2. 插件化的问题
 
+插件化需要解决俩个问题：
 
-# 2. 插件化
+1. 代码加载
+
+	类的加载可以通过ClassLoader机制，但是对于Android，一个类并不是加载进来就可以使用，它需要一个生命周期的来进行管理
+
+	另外，如果管理加载进来的类也是问题。例如，多个插件依赖了相同的类，是抽取公共依赖进行管理还是插件单独依赖，这就是ClassLoader的管理问题。
+
+2. 资源加载
+
+	大部分资源加载方案都是通过AssetManager的隐藏方法addAssetPath。
+
+	但是，对于不同的插件资源如何进行管理？是公用资源还是独立资源，公用资源如何避免资源冲突？
 
